fix: a number of table layout bugs (#422)

--- a/projects/observability/src/pages/explorer/explorer.component.scss
+++ b/projects/observability/src/pages/explorer/explorer.component.scss
@@ -3,7 +3,7 @@
 .explorer-container {
   display: flex;
   flex-direction: column;
-  padding: 24px;
+  padding: 24px 24px 0;
   height: calc(100% - 40px);
 
   .filter-bar {
